[gd_scene load_steps=4 format=3 uid="uid://pejle0jouayn"]

[ext_resource type="Script" uid="uid://dgkq0fnumyrjd" path="res://scripts/fase_2_2.gd" id="1_d3hk1"]
[ext_resource type="Texture2D" uid="uid://dnjia0bbruoni" path="res://assets/backgrounds/fundo jogo.png" id="1_yh6s2"]
[ext_resource type="Texture2D" uid="uid://bmxeirivvp3th" path="res://assets/btn.png" id="2_d3hk1"]

[node name="Fase22" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d3hk1")

[node name="fundo" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1150.0
offset_bottom = 646.0
texture = ExtResource("1_yh6s2")

[node name="explicacao_container" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="titulo_label" type="Label" parent="explicacao_container"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Fase 01"

[node name="texto_label" type="Label" parent="explicacao_container"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Explicação"

[node name="button_continuar" type="Button" parent="explicacao_container"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Continuar"
icon = ExtResource("2_d3hk1")

[node name="quiz_container" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="pergunta_label" type="Label" parent="quiz_container"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="opcoes_container" type="VBoxContainer" parent="quiz_container"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="opcao_1" type="Button" parent="quiz_container/opcoes_container"]
layout_mode = 2

[node name="label" type="Label" parent="quiz_container/opcoes_container/opcao_1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="opcao_2" type="Button" parent="quiz_container/opcoes_container"]
layout_mode = 2

[node name="label" type="Label" parent="quiz_container/opcoes_container/opcao_2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="opcao_3" type="Button" parent="quiz_container/opcoes_container"]
layout_mode = 2

[node name="label" type="Label" parent="quiz_container/opcoes_container/opcao_3"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="feedback_label" type="Label" parent="quiz_container"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="button_continuar" type="Button" parent="quiz_container"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Continuar
"
icon = ExtResource("2_d3hk1")

[node name="button_restart" type="Button" parent="quiz_container"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Refazer"
icon = ExtResource("2_d3hk1")

[node name="label_vitoria" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
